--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -4,6 +4,6 @@ Description: Placeholder
 Version: 0.1
 Authors@R: 'Scott Ritchie <sritchie73@gmail.com> [aut, cre]'
 Depends: R (>= 3.0.0), bigmemory, biganalytics, foreach, abind
-Suggests: doMC, doSNOW
+Suggests: doMC, doSNOW, WGCNA
 License: Placeholder
 LazyData: true
