Migrated to new project so that RStudio will build correctly with Rcpp. Template Rcpp files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
-# Source code for WGCNA package with comments to serve as reference
-src-*/
 .Rproj.user
-.Rprofile
 .Rhistory
+.Rprofile
+.RData
+.rda
 *.Rproj
-*.Rcheck/
+*.Rcheck
+
+# Compiled Rcpp code
+src/*.o
+src/*.so
+src/*.dll
+
+# Reference material for project.
+ref-*/
