--- a/Placeholder/DESCRIPTION
+++ b/Placeholder/DESCRIPTION
@@ -1,9 +1,10 @@
-Package: Placeholder
+Package: FastModPres
+Type: Package
 Title: Placeholder
-Description: Placeholder
 Version: 0.1
+Date: 2013-08-26
 Authors@R: 'Scott Ritchie <sritchie73@gmail.com> [aut, cre]'
-Depends: R (>= 3.0.0), bigmemory, biganalytics, foreach, abind, methods
-Suggests: doMC, doSNOW, WGCNA
+Description: Placeholder
 License: Placeholder
-LazyData: true
+Depends: Rcpp (>= 0.10.4), bigmemory, biganalytics, foreach, abind, methods
+LinkingTo: Rcpp
