--- a/Placeholder/NAMESPACE
+++ b/Placeholder/NAMESPACE
@@ -1,5 +1,2 @@
-export(fixSet)
-export(modulePreservation)
-export(pperm)
-export(qperm)
-export(rperm)
+useDynLib(FastModPres)
+exportPattern("^[[:alpha:]]+")
