Fixed export for diag methods.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -2,6 +2,8 @@ export(modulePreservation)
 export(pperm)
 export(qperm)
 export(rperm)
+exportMethods("diag<-")
+exportMethods(diag)
 import(abind)
 import(foreach)
 useDynLib(FastModPres)
