--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -2,7 +2,7 @@
 
 export("%nin%")
 export("%sub_in%")
-export(doParPermute)
+export("%sub_nin%")
 export(modulePreservation)
 export(pperm)
 export(qperm)
@@ -10,6 +10,8 @@ export(requiredPower)
 export(rperm)
 exportMethods("diag<-")
 exportMethods(diag)
-import(abind)
 import(foreach)
-useDynLib(FastModPres)
+importFrom(Rcpp,evalCpp)
+importFrom(abind,abind)
+importFrom(itertools,isplitIndices)
+useDynLib(netrep)
