--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -10,6 +10,7 @@ export(requiredPower)
 export(rperm)
 exportMethods("diag<-")
 exportMethods(diag)
+import(BH)
 import(foreach)
 importFrom(Rcpp,evalCpp)
 importFrom(abind,abind)
