--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -3,6 +3,7 @@
 export("%nin%")
 export("%sub_in%")
 export("%sub_nin%")
+export(kIM)
 export(meanAdj)
 export(pperm)
 export(qperm)
@@ -11,7 +12,9 @@ export(rperm)
 exportMethods("diag<-")
 exportMethods(diag)
 import(BH)
+import(bigmemory)
 import(foreach)
+import(methods)
 importFrom(Rcpp,evalCpp)
 importFrom(abind,abind)
 importFrom(itertools,isplitIndices)
