Added progress logging for parallel foreach loops.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -19,4 +19,6 @@ import(methods)
 importFrom(Rcpp,evalCpp)
 importFrom(abind,abind)
 importFrom(itertools,isplitIndices)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
 useDynLib(netrep)
