Added progress monitor for parallel loops.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -5,6 +5,7 @@ export("%sub_in%")
 export("%sub_nin%")
 export(kIM)
 export(meanAdj)
+export(monitorProgress)
 export(netRep)
 export(pperm)
 export(qperm)
