Finalised progress logging functions (to be implemented in the main function call), and set up master node in parallel foreach, along with cases where only one worker was registered.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -5,7 +5,6 @@ export("%sub_in%")
 export("%sub_nin%")
 export(kIM)
 export(meanAdj)
-export(monitorProgress)
 export(netRep)
 export(pperm)
 export(qperm)
@@ -19,6 +18,7 @@ import(foreach)
 import(methods)
 importFrom(Rcpp,evalCpp)
 importFrom(abind,abind)
+importFrom(itertools,idiv)
 importFrom(itertools,isplitIndices)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
