Fixed up parallel logging, and handling case where no parallel backend has been registered.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -18,7 +18,7 @@ import(foreach)
 import(methods)
 importFrom(Rcpp,evalCpp)
 importFrom(abind,abind)
-importFrom(itertools,idiv)
+importFrom(iterators,idiv)
 importFrom(itertools,isplitIndices)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
