bugfix import statement from 2 commits ago

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -19,6 +19,7 @@ import(methods)
 importFrom(Rcpp,evalCpp)
 importFrom(abind,abind)
 importFrom(iterators,idiv)
+importFrom(iterators,nextElem)
 importFrom(itertools,isplitIndices)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
