Heavily refactored main loop, separating network replication calculation logic into network property calculations, and network replication test statistic calculations. This should approximately halve the calculation time, since we're no longer calculating the network properties for the discovery data at every permutation.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -10,6 +10,8 @@ export(pperm)
 export(qperm)
 export(requiredPower)
 export(rperm)
+export(subsetProps)
+export(subsetTestStats)
 exportMethods("diag<-")
 exportMethods(diag)
 import(BH)
