--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -17,9 +17,11 @@ exportMethods(diag)
 import(BH)
 import(bigmemory)
 import(foreach)
+import(gPdtest)
 import(methods)
 importFrom(Rcpp,evalCpp)
 importFrom(abind,abind)
+importFrom(fExtremes,pgpd)
 importFrom(iterators,idiv)
 importFrom(iterators,nextElem)
 importFrom(itertools,isplitIndices)
