Added simple qqplot function for testing the tail approximation method. Will be removed in final version.

--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -21,7 +21,8 @@ Imports:
     utils,
     BH,
     gPdtest,
-    fExtremes
+    fExtremes,
+    graphics
 Suggests:
     testthat
 LinkingTo: Rcpp, BH, bigmemory
