--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -8,6 +8,7 @@ export(meanAdj)
 export(netRep)
 export(pperm)
 export(qperm)
+export(qqperm)
 export(requiredPower)
 export(rperm)
 export(subsetProps)
@@ -22,6 +23,7 @@ import(methods)
 importFrom(Rcpp,evalCpp)
 importFrom(abind,abind)
 importFrom(fExtremes,pgpd)
+importFrom(graphics,plot)
 importFrom(iterators,idiv)
 importFrom(iterators,nextElem)
 importFrom(itertools,isplitIndices)
