Added RcppArmadillo Dependency

--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -22,8 +22,9 @@ Imports:
     BH,
     gPdtest,
     fExtremes,
-    graphics
+    graphics,
+    RcppArmadillo (>= 0.4)
 Suggests:
     testthat
-LinkingTo: Rcpp, BH, bigmemory
+LinkingTo: Rcpp, BH, bigmemory, RcppArmadillo
 SystemRequirements: C++11
