--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -16,6 +16,7 @@ export(subsetTestStats)
 exportMethods("diag<-")
 exportMethods(diag)
 import(BH)
+import(RcppArmadillo)
 import(bigmemory)
 import(foreach)
 import(gPdtest)
