For now I will export the main loop, with the intention of creating interfaces later. Also added a function to plot the null distributions of each statistic after running the permutation tests.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -3,6 +3,8 @@
 export("%nin%")
 export("%sub_in%")
 export("%sub_nin%")
+export(netRepMain)
+export(plotStatDensities)
 export(pperm)
 export(qperm)
 export(qqperm)
@@ -23,6 +25,7 @@ importFrom(graphics,plot)
 importFrom(iterators,idiv)
 importFrom(iterators,nextElem)
 importFrom(itertools,isplitIndices)
+importFrom(scales,hue_pal)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 useDynLib(netrep)
