Added dependency to a package that should hopefully disable implicit parallelism.

--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
     methods,
     utils,
     BH,
-    RcppArmadillo (>= 0.4)
+    RcppArmadillo (>= 0.4),
+    RhpcBLASctl
 Suggests:
     testthat
 LinkingTo: Rcpp, BH, bigmemory, RcppArmadillo
