Compiled changes from last few commits

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -11,6 +11,7 @@ export(requiredPower)
 export(rperm)
 import(BH)
 import(RcppArmadillo)
+import(RhpcBLASctl)
 import(bigmemory)
 import(foreach)
 import(gPdtest)
