Permutation p-values now calculated using method provided by Phipson and Smyth: which takes into account total number of possible permutations to correct for overestimation of p-values.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -19,6 +19,7 @@ importFrom(graphics,plot)
 importFrom(iterators,idiv)
 importFrom(iterators,nextElem)
 importFrom(itertools,isplitIndices)
+importFrom(statmod,permp)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 useDynLib(netrep)
