Updated permutation tests to have a two-sided option, which is now used for the mean.Cor, cor.cor, cor.kIM, cor.kME, mean.kME calculations because it may reveal biologically interesting patterns of preservation.
Further debugged cross-tabulation measures.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -4,7 +4,7 @@ export("%nin%")
 export("%sub_in%")
 export("%sub_nin%")
 export(netRepMain)
-export(pperm)
+export(perm.test)
 export(qqperm)
 export(requiredPower)
 import(BH)
