Migrating in existing plotting code from other projects to create "preservation plots"

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -3,6 +3,10 @@
 export("%nin%")
 export("%sub_in%")
 export("%sub_nin%")
+export(ComparativeEdgeMatrix)
+export(OrderNetwork)
+export(PlotNetworkHeatmap)
+export(gradient.bar)
 export(netRepMain)
 export(perm.test)
 export(qqperm)
