--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -3,12 +3,11 @@
 export("%nin%")
 export("%sub_in%")
 export("%sub_nin%")
-export(ComparativeEdgeMatrix)
-export(OrderNetwork)
 export(PlotNetworkHeatmap)
-export(gradient.bar)
 export(netRepMain)
+export(orderNetwork)
 export(perm.test)
+export(plotCoexpression)
 export(qqperm)
 export(requiredPower)
 import(BH)
