Added some legend plots

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -3,11 +3,13 @@
 export("%nin%")
 export("%sub_in%")
 export("%sub_nin%")
-export(PlotNetworkHeatmap)
 export(netRepMain)
 export(orderNetwork)
 export(perm.test)
+export(plotCoexpLegend)
 export(plotCoexpression)
+export(plotGeneNames)
+export(plotModuleLegend)
 export(qqperm)
 export(requiredPower)
 import(BH)
