--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -5,11 +5,17 @@ export("%sub_in%")
 export("%sub_nin%")
 export(netRepMain)
 export(orderNetwork)
+export(orderSamples)
 export(perm.test)
-export(plotCoexpLegend)
 export(plotCoexpression)
+export(plotExpression)
 export(plotGeneNames)
+export(plotKIM)
+export(plotKME)
+export(plotLegend)
 export(plotModuleLegend)
+export(plotSummaryExpression)
+export(preservationPlot)
 export(qqperm)
 export(requiredPower)
 import(BH)
@@ -17,6 +23,7 @@ import(RcppArmadillo)
 import(RhpcBLASctl)
 import(bigmemory)
 import(foreach)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(Rcpp,evalCpp)
 importFrom(graphics,plot)
 importFrom(iterators,idiv)
