Massive overhaul of API and documentation to fix consistency issues with variable naming and statistic naming. Updated documentation to be current, and added detailed instructions for use of the main function as it stands.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -3,8 +3,9 @@
 export("%nin%")
 export("%sub_in%")
 export("%sub_nin%")
+export(combineNulls)
 export(netRepMain)
-export(orderNetwork)
+export(orderModule)
 export(orderSamples)
 export(perm.test)
 export(plotCoexpression)
@@ -16,7 +17,6 @@ export(plotLegend)
 export(plotModuleLegend)
 export(plotSummaryExpression)
 export(preservationPlot)
-export(qqperm)
 export(requiredPower)
 import(BH)
 import(RcppArmadillo)
@@ -25,7 +25,7 @@ import(bigmemory)
 import(foreach)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(Rcpp,evalCpp)
-importFrom(graphics,plot)
+importFrom(abind,abind)
 importFrom(iterators,idiv)
 importFrom(iterators,nextElem)
 importFrom(itertools,isplitIndices)
