--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -2,6 +2,7 @@ Package: netrep
 Type: Package
 Title: Network Replication
 Version: 0.10.6
+Version: 0.10.7
 Date: 2013-08-26
 Authors@R: 'Scott Ritchie <sritchie73@gmail.com> [aut, cre]'
 Description: Functions for efficiently and accurately assessing whether the
