--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -3,7 +3,9 @@
 export("%nin%")
 export("%sub_in%")
 export("%sub_nin%")
+export(as.bigMatrix)
 export(combineNulls)
+export(load.bigMatrix)
 export(netRepMain)
 export(orderModule)
 export(orderSamples)
@@ -17,12 +19,34 @@ export(plotLegend)
 export(plotModuleLegend)
 export(plotSummaryExpression)
 export(preservationPlot)
+export(read.bigMatrix)
 export(requiredPower)
+export(save.as.bigMatrix)
+export(write.bigMatrix)
+exportMethods("[")
+exportMethods("[<-")
+exportMethods("colnames<-")
+exportMethods("dimnames<-")
+exportMethods("rownames<-")
+exportMethods(as.big.matrix)
+exportMethods(as.matrix)
+exportMethods(colnames)
+exportMethods(dim)
+exportMethods(dimnames)
+exportMethods(head)
+exportMethods(ncol)
+exportMethods(nrow)
+exportMethods(print)
+exportMethods(rownames)
+exportMethods(show)
+exportMethods(tail)
+exportMethods(typeof)
 import(BH)
 import(RcppArmadillo)
 import(RhpcBLASctl)
 import(bigmemory)
 import(foreach)
+import(methods)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(Rcpp,evalCpp)
 importFrom(abind,abind)
