--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -7,6 +7,7 @@ export(as.bigMatrix)
 export(combineNulls)
 export(load.bigMatrix)
 export(netRepMain)
+export(networkProperties)
 export(orderModule)
 export(orderSamples)
 export(perm.test)
