First pass conversion of the main function to use 'bigMatrix'. Still needs unit testing and documentation updates.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -5,8 +5,9 @@ export("%sub_in%")
 export("%sub_nin%")
 export(as.bigMatrix)
 export(combineNulls)
+export(is.bigMatrix)
 export(load.bigMatrix)
-export(netRepMain)
+export(modulePreservation)
 export(networkProperties)
 export(orderModule)
 export(orderSamples)
