--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -19,7 +19,7 @@ export(plotModuleLegend)
 export(plotSummaryExpression)
 export(preservationPlot)
 export(read.bigMatrix)
-export(requiredPower)
+export(requiredPerms)
 export(save.as.bigMatrix)
 export(write.bigMatrix)
 exportMethods("[")
