--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -6,6 +6,7 @@ export(is.bigMatrix)
 export(load.bigMatrix)
 export(modulePreservation)
 export(networkProperties)
+export(orderGenes)
 export(orderModule)
 export(orderSamples)
 export(perm.test)
