Renamed orderGenes as geneOrder. Handled edge case for genes missing from independent dataset.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -2,11 +2,11 @@
 
 export(as.bigMatrix)
 export(combineNulls)
+export(geneOrder)
 export(is.bigMatrix)
 export(load.bigMatrix)
 export(modulePreservation)
 export(networkProperties)
-export(orderGenes)
 export(orderModule)
 export(orderSamples)
 export(perm.test)
