Implemented coexpression plot, migrating existing code from preservation-plots.R

--- a/package/DESCRIPTION
+++ b/package/DESCRIPTION
@@ -23,7 +23,8 @@ Imports:
     BH,
     RhpcBLASctl,
     RColorBrewer,
-    abind
+    abind,
+    RColorBrewer
 Suggests:
     testthat,
     doMC,
