--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -42,12 +42,12 @@ exportMethods(show)
 exportMethods(tail)
 exportMethods(typeof)
 import(BH)
+import(RColorBrewer)
 import(RcppArmadillo)
 import(RhpcBLASctl)
 import(bigmemory)
 import(foreach)
 import(methods)
-importFrom(RColorBrewer,brewer.pal)
 importFrom(Rcpp,evalCpp)
 importFrom(abind,abind)
 importFrom(iterators,idiv)
