Implemented plotSquareHeatmap and plotAdjacency.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -10,6 +10,7 @@ export(networkProperties)
 export(orderModule)
 export(orderSamples)
 export(perm.test)
+export(plotAdjacency)
 export(plotCoexpression)
 export(plotExpression)
 export(plotGeneNames)
