--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -10,6 +10,7 @@ export(networkProperties)
 export(perm.test)
 export(plotAdjacency)
 export(plotCoexpression)
+export(plotModuleMembership)
 export(read.bigMatrix)
 export(requiredPerms)
 export(save.as.bigMatrix)
