Added legend to the coexpression and adjacency plots, as well as functions to plot legend independently. plotAdjacency is now fully implemented instead of calling plotCoexpression to avoid user confusion over color palette specification.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -9,7 +9,9 @@ export(modulePreservation)
 export(networkProperties)
 export(perm.test)
 export(plotAdjacency)
+export(plotAdjacencyLegend)
 export(plotCoexpression)
+export(plotCoexpressionLegend)
 export(plotConnectivity)
 export(plotModuleMembership)
 export(read.bigMatrix)
