--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -16,6 +16,7 @@ export(plotConnectivity)
 export(plotModuleMembership)
 export(read.bigMatrix)
 export(requiredPerms)
+export(sampleOrder)
 export(save.as.bigMatrix)
 export(write.bigMatrix)
 exportMethods("[")
