Added expression legend plot, and handled unbalanced ranges when plotting legends.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -13,6 +13,7 @@ export(plotAdjacencyLegend)
 export(plotCoexpression)
 export(plotCoexpressionLegend)
 export(plotConnectivity)
+export(plotExpressionLegend)
 export(plotModuleMembership)
 export(read.bigMatrix)
 export(requiredPerms)
