Implemented SummaryExpression plots

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -15,6 +15,7 @@ export(plotCoexpressionLegend)
 export(plotConnectivity)
 export(plotExpressionLegend)
 export(plotModuleMembership)
+export(plotSummaryExpression)
 export(read.bigMatrix)
 export(requiredPerms)
 export(sampleOrder)
