--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -13,6 +13,7 @@ export(plotAdjacencyLegend)
 export(plotCoexpression)
 export(plotCoexpressionLegend)
 export(plotConnectivity)
+export(plotExpression)
 export(plotExpressionLegend)
 export(plotModuleMembership)
 export(plotSummaryExpression)
