Implemented module plot, lots of tweaks to plotting functions.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -15,6 +15,7 @@ export(plotCoexpressionLegend)
 export(plotConnectivity)
 export(plotExpression)
 export(plotExpressionLegend)
+export(plotModule)
 export(plotModuleMembership)
 export(plotSummaryExpression)
 export(read.bigMatrix)
