Incrementing version number and renaming package to better reflect its purpose.

--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -38,4 +38,4 @@ importFrom(itertools,isplitIndices)
 importFrom(statmod,permp)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
-useDynLib(netrep)
+useDynLib(fastModPres)
