modulePreservation now allows user to specify correlation method to use when calculating the module preservation statistics. Solves Issue #9

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,10 +23,10 @@ Imports:
     BH,
     RhpcBLASctl,
     abind,
-    RColorBrewer
+    RColorBrewer,
+    WGCNA
 Suggests:
     testthat,
     doMC,
     doParallel
-Enhances: WGCNA
 LinkingTo: Rcpp, BH, bigmemory, RcppArmadillo
