--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ import(BH)
 import(RColorBrewer)
 import(RcppArmadillo)
 import(RhpcBLASctl)
+import(WGCNA)
 import(bigmemory)
 import(foreach)
 import(methods)
