renamed to NetRep

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
-Package: netrep
+Package: NetRep
 Type: Package
-Title: Testing network module replication and preservation through permutation testing
+Title: Testing network module replication and preservation through permutation
+    testing
 Version: 0.25.0
 Date: 2013-08-26
 Authors@R: 'Scott Ritchie <sritchie73@gmail.com> [aut, cre]'
