--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,4 +39,4 @@ importFrom(itertools,isplitIndices)
 importFrom(statmod,permp)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
-useDynLib(netrep)
+useDynLib(NetRep)
