Moved WGCNA to a suggests instead of depends to simplify package installation. Created a dispatch function to cor in the main loop to reduce overhead at each permutation.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,11 +24,11 @@ Imports:
     BH,
     RhpcBLASctl,
     abind,
-    RColorBrewer,
-    WGCNA
+    RColorBrewer
 Suggests:
     testthat,
     doMC,
-    doParallel
+    doParallel,
+    WGCNA
 LinkingTo: Rcpp, BH, bigmemory, RcppArmadillo
 RoxygenNote: 5.0.0
