Updating NAMESPACE file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,22 +2,22 @@
 
 export(as.bigMatrix)
 export(combineNulls)
-export(geneOrder)
 export(is.bigMatrix)
 export(load.bigMatrix)
 export(modulePreservation)
 export(networkProperties)
+export(nodeOrder)
 export(perm.test)
-export(plotAdjacency)
-export(plotAdjacencyLegend)
-export(plotCoexpression)
-export(plotCoexpressionLegend)
 export(plotConnectivity)
-export(plotExpression)
-export(plotExpressionLegend)
+export(plotCorrelation)
+export(plotCorrelationLegend)
+export(plotData)
+export(plotDataLegend)
 export(plotModule)
 export(plotModuleMembership)
-export(plotSummaryExpression)
+export(plotModuleSummary)
+export(plotNetwork)
+export(plotNetworkLegend)
 export(read.bigMatrix)
 export(requiredPerms)
 export(sampleOrder)
