Renamed module properties, associated plot functions, and updated documentation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,16 +8,16 @@ export(modulePreservation)
 export(networkProperties)
 export(nodeOrder)
 export(perm.test)
-export(plotConnectivity)
+export(plotContribution)
 export(plotCorrelation)
 export(plotCorrelationLegend)
 export(plotData)
 export(plotDataLegend)
+export(plotDegree)
 export(plotModule)
-export(plotModuleMembership)
-export(plotModuleSummary)
 export(plotNetwork)
 export(plotNetworkLegend)
+export(plotSummary)
 export(read.bigMatrix)
 export(requiredPerms)
 export(sampleOrder)
