bigMatrix documentation and linking.
Rolled into one RD file. Fixed cross-referencing in other documentation. OH, and I had to @export every S4 method because apparently roxygen2 has changed the wa it handles this. THANKS GUYS. REALLY NEEDED THAT RIGHT NOW.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,20 @@ export(requiredPerms)
 export(sampleOrder)
 export(save.as.bigMatrix)
 export(write.bigMatrix)
+exportMethods("[")
+exportMethods("[<-")
+exportMethods("dimnames<-")
+exportMethods(as.big.matrix)
+exportMethods(as.matrix)
+exportMethods(dim)
+exportMethods(dimnames)
+exportMethods(head)
+exportMethods(ncol)
+exportMethods(nrow)
+exportMethods(print)
+exportMethods(show)
+exportMethods(tail)
+exportMethods(typeof)
 import(BH)
 import(RColorBrewer)
 import(RcppArmadillo)
