Fixed S4 method exporting
Removed blanked @export and move 'utils' from "Imports" to "Depends" so that 'head' and 'tail' methods work correctly.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,14 +10,14 @@ Description: Functions for assessing the replication/preservation of a network
 License: GPL-2
 Depends:
     R (>= 3.0.0),
-    methods
+    methods,
+    utils
 Imports:
     bigmemory,
     foreach,
     iterators,
     itertools,
     Rcpp (>= 0.11),
-    utils,
     statmod,
     RcppArmadillo,
     BH,
