--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,10 @@ Package: NetRep
 Type: Package
 Title: Testing network module replication and preservation through permutation
     testing
-Version: 0.53.0
+Version: 0.53.1
 Date: 2013-08-26
 Authors@R: 'Scott Ritchie <sritchie73@gmail.com> [aut, cre]'
+Maintainer: Scott Ritchie <sritchie73@gmail.com>
 Description: Functions for assessing the replication/preservation of a network 
   module's topology across datasets through permutation testing.
 License: GPL-2
