--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,8 +18,8 @@ Imports:
     iterators,
     itertools,
     Rcpp (>= 0.11),
+    RcppArmadillo (>= 0.6.700),
     statmod,
-    RcppArmadillo,
     BH,
     RhpcBLASctl,
     abind,
