Removed scaleBigMatrix: scaling now happens on matrix data in the C++ backend

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(save.as.bigMatrix)
 export(write.bigMatrix)
 import(BH)
 import(RColorBrewer)
+import(RcppArmadillo)
 import(RhpcBLASctl)
 import(bigmemory)
 import(foreach)
