Reverted back to using parallel::detectCores to detect maximum number of threads after the C++ equivalent failed to return a sensible result on our cluster.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,5 +29,6 @@ import(foreach)
 import(methods)
 importFrom(Rcpp,evalCpp)
 importFrom(abind,abind)
+importFrom(parallel,detectCores)
 importFrom(statmod,permp)
 useDynLib(NetRep)
