Fixed imports, and added .onUnload function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,9 +15,10 @@ export(plotNetwork)
 export(plotSummary)
 export(requiredPerms)
 export(sampleOrder)
+import(BH)
 import(RColorBrewer)
+import(RcppArmadillo)
 import(RhpcBLASctl)
-import(bigmemory)
 import(foreach)
 importFrom(Rcpp,evalCpp)
 importFrom(abind,abind)
