--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,7 @@ Suggests:
     knitr,
     rmarkdown
 LinkingTo: Rcpp, BH, RcppArmadillo
+SystemRequirements: C++11
 RoxygenNote: 5.0.0
 VignetteBuilder: knitr
 BuildVignettes: false
