--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,10 @@ import(RColorBrewer)
 import(RcppArmadillo)
 import(RhpcBLASctl)
 import(foreach)
+import(grDevices)
+import(graphics)
+import(stats)
+import(utils)
 importFrom(Rcpp,evalCpp)
 importFrom(abind,abind)
 importFrom(parallel,detectCores)
