--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ import(foreach)
 import(grDevices)
 import(graphics)
 import(methods)
+import(ref)
 import(stats)
 import(utils)
 importFrom(Rcpp,evalCpp)
