--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,22 @@
 Package: NetRep
 Type: Package
-Title: Permutation testing network module preservation across datasets
-Version: 1.00.0
+Title: Permutation Testing Network Module Preservation Across Datasets
+Version: 1.0.1
 Date: 2016-07-28
-Authors@R: 'Scott Ritchie <sritchie73@gmail.com> [aut, cre]'
+Authors@R: person(given="Scott", family="Ritchie", 
+                  email="sritchie73@gmail.com", 
+                  role=c("aut", "cre"))
 BugReports: https://github.com/InouyeLab/NetRep/issues
 Description: Functions for assessing the replication/preservation of a network 
   module's topology across datasets through permutation testing.
 License: GPL-2
 Depends:
-    R (>= 3.0.0),
+    R (>= 3.0.2),
     methods
 Imports:
     foreach,
     Rcpp (>= 0.11),
-    RcppArmadillo (>= 0.4),
     statmod,
-    BH,
     RhpcBLASctl,
     abind,
     RColorBrewer,
@@ -30,7 +30,7 @@ Suggests:
     testthat,
     knitr,
     rmarkdown
-LinkingTo: Rcpp, BH, RcppArmadillo
+LinkingTo: Rcpp, BH, RcppArmadillo (>= 0.4)
 SystemRequirements:
   A compiler with C++11 support for the thread library,
   Requires Rtools >= 33 (i.e. R >= 3.3.0) to build on Windows.
