--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: NetRep
 Type: Package
 Title: Permutation Testing Network Module Preservation Across Datasets
-Version: 1.2.3
-Date: 2020-10-06
+Version: 1.2.4
+Date: 2020-10-07
 Authors@R: person(given="Scott", family="Ritchie", 
                   email="sritchie73@gmail.com", 
                   role=c("aut", "cre"))
 BugReports: https://github.com/sritchie73/NetRep/issues
 Description: Functions for assessing the replication/preservation of a network 
-  module's topology across datasets through permutation testing.
+  module's topology across datasets through permutation testing; Ritchie et al. 
+  (2015) <doi: 10.1016/j.cels.2016.06.012>.
 License: GPL-2
 Depends:
     R (>= 3.0.2),
