--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: NetRep
 Type: Package
 Title: Permutation Testing Network Module Preservation Across Datasets
-Version: 1.2.4
+Version: 1.2.5
 Date: 2020-10-07
 Authors@R: person(given="Scott", family="Ritchie", 
                   email="sritchie73@gmail.com", 
-                  role=c("aut", "cre"))
+                  role=c("aut", "cre"),
+                  comment=(ORCID="0000-0002-8454-9548"))
 BugReports: https://github.com/sritchie73/NetRep/issues
 Description: Functions for assessing the replication/preservation of a network 
   module's topology across datasets through permutation testing; Ritchie et al. 
@@ -34,6 +35,6 @@ LinkingTo: Rcpp, BH, RcppArmadillo (>= 0.4)
 SystemRequirements:
   A compiler with C++11 support for the thread library,
   Requires Rtools >= 33 (i.e. R >= 3.3.0) to build on Windows.
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.3
 VignetteBuilder: knitr
 Encoding: UTF-8
